--- a/elastic/Dockerfile
+++ b/elastic/Dockerfile
@@ -1,9 +1,9 @@
 FROM centos
 MAINTAINER Jaime Meritt <jaime.meritt@gmail.com>
-RUN rpm --import https://packages.elastic.co/GPG-KEY-elasticsearch
 ADD elasticsearch.repo /etc/yum.repos.d/elasticsearch.repo
-RUN yum -y update && yum -y install java-1.8.0-openjdk-devel elasticsearch
-RUN set -ex \
+RUN rpm --import https://packages.elastic.co/GPG-KEY-elasticsearch \
+    && yum -y update && yum -y install java-1.8.0-openjdk-devel elasticsearch \
+    && set -ex \
     && for path in \
        /usr/share/elasticsearch/data \
        /usr/share/elasticsearch/logs \
