fixed elasticsearch integration;created a run script so I can stop typing

--- a/logstash/rss.conf
+++ b/logstash/rss.conf
@@ -47,6 +47,11 @@ filter {
 }
 
 output {
-  #elasticsearch { hosts => ["elastic:9200"] }
+  elasticsearch {
+    hosts => ["elastic:9200"]
+    index => "classactions"
+    document_type => "rss"
+    document_id => "%{id}"
+  }
   stdout { codec => rubydebug }
 }
